// Use this code on https://dbdiagram.io to generate an ERD

Table user {
  id varchar [primary key]
  name varchar
  email varchar [unique]
  emailVerified timestamp
  image varchar
  createdAt timestamp
  updatedAt timestamp
  role varchar [default: 'user']
}

Table session {
  id varchar [primary key]
  expiresAt timestamp
  token varchar [unique]
  createdAt timestamp
  updatedAt timestamp
  ipAddress varchar
  userAgent varchar
  userId varchar [ref: > user.id]
}

Table account {
  id varchar [primary key]
  accountId varchar
  providerId varchar
  userId varchar [ref: > user.id]
  accessToken varchar
  refreshToken varchar
  idToken varchar
  accessTokenExpiresAt timestamp
  refreshTokenExpiresAt timestamp
  scope varchar
  password varchar
  createdAt timestamp
  updatedAt timestamp
}

Table categories {
  id serial [primary key]
  name varchar
  slug varchar [unique]
  description text
  createdAt timestamp [default: `now()`]
}

Table products {
  id serial [primary key]
  categoryId integer [ref: > categories.id]
  name varchar
  slug varchar [unique]
  description text
  price float
  status varchar [default: 'available']
  image varchar
  formFactor varchar
  connectivity varchar
  management varchar
  warranty varchar
  createdAt timestamp [default: `now()`]
}

Table inventory_movements {
  id serial [primary key]
  productId integer [ref: > products.id]
  userId varchar [ref: > user.id]
  type varchar [note: "'IN' or 'OUT'"]
  quantity integer
  notes text
  createdAt timestamp [default: `now()`]
}

Table orders {
  id serial [primary key]
  customerName varchar
  customerEmail varchar
  customerPhone varchar
  status varchar [default: 'completed']
  totalAmount float
  createdAt timestamp [default: `now()`]
}

Table order_items {
  id serial [primary key]
  orderId integer [ref: > orders.id]
  productId integer [ref: > products.id]
  quantity integer
  unitPrice float
}
